--- a/index.html
+++ b/index.html
@@ -19,26 +19,31 @@
                 <p>
                     <strong>Regd. Office:</strong> Indian Institute of
                     Technology Mandi, VPO Kamand, Mandi, Himachal Pradesh, India
-                    – 175075
+                    - 175075
                 </p>
             </header>
             <h2>Declaration Regarding the Issued Items</h2>
             <form id="declarationForm">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required />
+                <input type="text" id="name" name="Name " required />
                 <label for="affiliation">Affiliation:</label>
                 <input
                     type="text"
                     id="affiliation"
-                    name="affiliation"
+                    name="Affiliation"
                     required
                 />
-                <label for="address">Permanent Address:</label>
-                <input type="text" id="address" name="address" required />
+                <label for="Address">Permanent Address:</label>
+                <input type="text" id="address" name="Address " required />
                 <label for="purpose">Purpose:</label>
-                <input type="text" id="purpose" name="purpose" required />
+                <input type="text" id="purpose" name="Purpose " required />
                 <label for="mobile">Mobile No.:</label>
-                <input type="text" id="mobile" name="mobile" required />
+                <input
+                    type="text"
+                    id="mobile"
+                    name="Mobile Number ->"
+                    required
+                />
 
                 <table id="itemsTable">
                     <thead>
@@ -55,20 +60,32 @@
                         <tr>
                             <td>1</td>
                             <td>
-                                <input type="text" name="itemname1" required />
-                            </td>
-                            <td>
-                                <input type="date" name="issuedate1" required />
-                            </td>
-                            <td>
                                 <input
-                                    type="date"
-                                    name="returndate1"
+                                    type="text"
+                                    name="Item Name of Row 1"
                                     required
                                 />
                             </td>
                             <td>
-                                <input type="text" name="serialno1" required />
+                                <input
+                                    type="date"
+                                    name="Issue Date of Row 1"
+                                    required
+                                />
+                            </td>
+                            <td>
+                                <input
+                                    type="date"
+                                    name="Return Date of Row 1"
+                                    required
+                                />
+                            </td>
+                            <td>
+                                <input
+                                    type="text"
+                                    name="Having Serial Number"
+                                    required
+                                />
                             </td>
                             <td>
                                 <button type="button" class="deleteRowButton">
@@ -79,25 +96,29 @@
                     </tbody>
                 </table>
                 <button type="button" id="addRowButton">Add Row</button>
+                <br />
                 <p>Usage Charges for IIT Mandi Members - ₹1500 per hour</p>
                 <p>
                     Usage Charges for Non-IIT Mandi Affiliated Members - ₹3000
                     per hour
                 </p>
-                <label for="payment-proof">Upload Payment Proof:</label>
+                <br />
+
+                <!-- <label for="payment-proof">Upload Payment Proof:</label>
                 <input
                     type="file"
                     id="payment-proof"
                     name="payment-proof"
                     accept="image/*"
                     required
-                />
+                /> -->
 
                 <span
                     ><input
                         type="checkbox"
                         id="declaration1"
-                        name="declaration1"
+                        name="I hereby declare that the equipment details of which given above are available to me. I verified that the condition of the product was good before handing it to me during my inspections."
+                        required
                     />
                     <label for="declaration1"
                         >I hereby declare that the equipment details of which
@@ -111,7 +132,8 @@
                     ><input
                         type="checkbox"
                         id="declaration2"
-                        name="declaration2"
+                        name="I also declare that I will send prior intimation to IIT Mandi iHub and HCI Foundation whenever the equipment is not available for any reason."
+                        required
                     />
                     <label for="declaration2"
                         >I also declare that I will send prior intimation to IIT
@@ -124,7 +146,8 @@
                     ><input
                         type="checkbox"
                         id="declaration3"
-                        name="declaration3"
+                        name="I also declare that I will be responsible for the above-mentioned equipment and any damage to the equipment will be borne by me only."
+                        required
                     />
                     <label for="declaration3"
                         >I also declare that I will be responsible for the
@@ -137,7 +160,8 @@
                     ><input
                         type="checkbox"
                         id="declaration4"
-                        name="declaration4"
+                        name="I also declare that I will return the above-mentioned item in good working condition to the IIT Mandi iHub and HCI Foundation office before I leave the company or as requested by the company."
+                        required
                     />
                     <label for="declaration4"
                         >I also declare that I will return the above-mentioned
@@ -146,32 +170,6 @@
                         requested by the company.</label
                     ></span
                 ><br />
-
-                <label for="user-signature">Signatures of the User</label>
-                <input
-                    type="file"
-                    id="user-signature"
-                    name="user-signature"
-                    accept="image/*"
-                    required
-                />
-
-                <label for="user-name">Name:</label>
-                <input type="text" id="user-name" name="user-name" required />
-                <label for="user-affiliation">Affiliation:</label>
-                <input
-                    type="text"
-                    id="user-affiliation"
-                    name="user-affiliation"
-                    required
-                />
-                <label for="date-of-issue">Date of Issue:</label>
-                <input
-                    type="date"
-                    id="date-of-issue"
-                    name="date-of-issue"
-                    required
-                />
 
                 <button type="submit">Submit</button>
             </form>
@@ -191,6 +189,13 @@
                     | <strong>CIN:</strong> U73100HP2020NPL008102
                 </p>
             </footer>
+        </div>
+
+        <div id="confirmationMessage" style="display: none">
+            <p>
+                Thank you for your submission! Please attach the payment proof
+                in the automatically created email client.
+            </p>
         </div>
     </body>
 </html>
